# goggle

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
data/: README.md  gutenberg.sh
data/simple_documents/: 1 Computers.txt  10_Databases.txt  2 Programming.txt  3 Networks.txt  4_Data.txt  5_Algorithims.txt  6_Internet.txt  7_Software.txt  8_Files.txt  9_Hardware.txt
src/: main.cpp  searchexample.cpp
src/core/: ArrayList.h  HashMap.hpp  MaxHeap.hpp  Trie.h  Trie.hpp
src/index/: FrequencyCounter.hpp  Index.hpp  Indexer.hpp  StringUtils.hpp  _index_tests.cpp
src/index/file/: DocumentSet.hpp  FileReader.cpp  FileReader.hpp  FrequencyCounter.hpp
src/interface/: Autocomplete.hpp
src/model/: Argument.hpp  Book.hpp  Result.hpp
src/search/: Parser.hpp  Search.hpp  Searcher.hpp
test/core/: ArrayList.cpp  Trie.cpp
test/index/: FrequencyCounter.cpp
test/index/file/: DocumentSet.cpp  FileReader.cpp
test/search/: Parser.cpp
